force-app/main/default/objects/Investor__c/Investor__c.object-meta.xml
<CustomObject>
    <label>Investor</label>
    <nameField>
        <label>Investor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>