force-app/main/default/objects/Investor__c/fields/Deposited__c.field-meta.xml
<CustomField>
    <fullName>Deposited__c</fullName>
    <label>Deposited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>