force-app/main/default/objects/Investor__c/fields/Total_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Total_Distribution__c</fullName>
    <label>Total Distribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>